--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/cashier": "^12.3",
         "laravel/framework": "7.0.*",
         "laravel/passport": "7.5.1",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
