--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "7.0.*",
         "laravel/passport": "7.5.1",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.2"
+        "laravel/ui": "^2.2",
+        "stevebauman/location": "^5.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
