--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.2.5",
         "fideloper/proxy": "^4.0",
+        "jenssegers/agent": "^2.6",
         "laravel/cashier": "^12.3",
         "laravel/framework": "7.0.*",
         "laravel/passport": "7.5.1",
