--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
         "php": "^7.2.5",
         "fideloper/proxy": "^4.0",
         "jenssegers/agent": "^2.6",
-        "laravel/cashier": "^12.3",
         "laravel/framework": "7.0.*",
         "laravel/passport": "7.5.1",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.2",
-        "stevebauman/location": "^5.1"
+        "stevebauman/location": "^5.1",
+        "stripe/stripe-php": "^7.52"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
