--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/passport": "7.5.1",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.2",
+        "nesbot/carbon": "^2.40",
         "stevebauman/location": "^5.1",
         "stripe/stripe-php": "^7.52"
     },
